# border-wars

./: Cargo.toml  Containerfile  README.md  flake.nix
.gitea/workflows/: rust.yml
crates/bevnet/: Cargo.toml
crates/bevnet-relay/: Cargo.toml
crates/bevnet/src/: lib.rs
crates/border-wars/: Cargo.toml
crates/border-wars/src/: camera.rs  hex.rs  lib.rs  main.rs  menu.rs  resources.rs  responsive_scale.rs
crates/border-wars/src/actions/: mod.rs
crates/border-wars/src/map/: click_tile.rs  generation.rs  hex.rs  mod.rs  ownership.rs  renderer.rs  selected_tile.rs  spawnpoint.rs
crates/border-wars/src/networking/: check_connection.rs  connection.rs  mod.rs  reconnection.rs
crates/border-wars/src/scenes/: lobby.rs  menu.rs  mod.rs
crates/border-wars/src/ui/: game_ui.rs  hover.rs  mod.rs  tiles_info.rs
crates/relay-client/: Cargo.toml
crates/relay-client/src/: lib.rs
crates/relay-raft/: Cargo.toml
crates/relay-raft/src/: lib.rs  main.rs
crates/relay-server/: Cargo.toml
crates/relay-server/src/: main.rs
crates/server/: Cargo.toml
crates/server/save src/: lib.rs  lobby.rs  main.rs
crates/server/src/: lib.rs  main save.rs  main.rs  manager.rs
crates/server/src dada/: lib.rs  main.rs
crates/server/src save/: game.rs  game_save.rs  lib dada.rs  lib save.rs  lib.rs  lobby.rs  login.rs  main.rs  utils.rs
docs/: actions.md
docs/brainstorms/: brainstorm1.md  brainstorm2.md
src/: main.rs
webpage/: index.html  styles.css  text.md
