[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
type_complexity = "allow"
missing_docs_in_private_items = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
nursery = "warn"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
