[package]
name = "bevnet-relay"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A relay server for bevnet."
authors = ["Tipragot <contact@tipragot.fr>"]
keywords = ["bevy", "network", "game"]
categories = ["network-programming", "game-development"]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.36.0", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
axum = { version = "0.7.4", features = ["ws"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
futures = { version = "0.3.30", optional = true }
dashmap = { version = "5.5.3", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
default = []
server = [
    "dep:tokio",
    "dep:axum",
    "dep:lazy_static",
    "dep:futures",
    "dep:dashmap",
    "dep:rand",
]

[[bin]]
name = "server"
required-features = ["server"]
