[package]
name = "bevnet"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A library for networking in Bevy."
authors = ["Tipragot <contact@tipragot.fr>"]
keywords = ["bevy", "network", "game"]
categories = ["network-programming", "game-development"]

[lints]
workspace = true

[dependencies]
local-ip-address = "0.5.7"
aes-gcm = "0.10.3"
base64 = "0.21.7"
igd = "0.12.1"
