[package]
name = "bevnet"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A library for networking in Bevy."
authors = ["Tipragot <contact@tipragot.fr>"]
keywords = ["bevy", "network", "game"]
categories = ["network-programming", "game-development"]

[lints]
workspace = true

[dependencies]
relay-client = { path = "../relay-client" }
serde = "1.0.196"
bincode = "1.3.3"
dashmap = "5.5.3"
bevy = "0.12.1"
uuid = "1.7.0"
