[package]
name = "border-wars"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "An online turn based game."
repository = "https://git.tipragot.fr/corentin/border-wars.git"
authors = ["CoCoSol"]

[lints]
workspace = true

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
num = "0.4.1"
partial-min-max = "0.4.0"
paste = "1.0.14"
