[package]
name = "relay-client"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A client to use a relay server."
authors = ["Tipragot <contact@tipragot.fr>"]
keywords = ["bevy", "network", "game"]
categories = ["network-programming", "game-development"]

[lints]
workspace = true

[dependencies]
tungstenite = { version = "0.21.0", features = ["rustls-tls-native-roots"] }
mio = { version = "0.8.10", features = ["net", "os-poll"] }
uuid = "1.7.0"
rand = "0.8.5"
home = "0.5.9"
log = "0.4.20"
