[package]
name = "server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The server of Border Wars"
repository = "https://git.tipragot.fr/corentin/border-wars.git"

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["serde", "v7"] }
serde = { version = "1.0.197", features = ["derive"] }
axum = { version = "0.7.5", features = ["ws"] }
ascon-hash = "0.2.0"
rand = "0.8.5"
futures = "0.3.30"
bincode = "1.3.3"
lazy_static = "1.4.0"

# [lints]
# workspace = true
